Rename operation: "research output" or similar renamed to "research result" or similar. Also for e.g. ROCATEGORY_... to RESEARCHRESULT_CATEGORY...
